php.yaml
# php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: abdelrahmanrefaat95x/php:latest
          volumeMounts:
            - name: php-src
              mountPath: /var/www/html
      volumes:
        - name: php-src
          persistentVolumeClaim:
            claimName: php-src-pvc
