ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  ingressClassName: nginx   
 # This is for versions beyond v1.1.0
  rules:
  - host: refaat-cluster # Or your desired external URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service # The name of the service for your Nginx pod
            port:
              number: 80
